# mesh_alignment

./: CMakeLists.txt  CMakeLists_copy.txt  ICP_p2plane.cpp  ICP_p2plane.h  README.md  calc_barycentre.cpp  calc_barycentre.h  icp.cpp  icp.h  main.cpp  multi_mesh_example.cpp  multiview_main.cpp  old_main.cpp  point_to_plane.cpp  point_to_plane.h
libigl-master/file-formats/: xml.html
libigl-master/tutorial/301_Slice/: main.cpp
libigl-master/tutorial/306_EigenDecomposition/: main.cpp
libigl-master/tutorial/403_BoundedBiharmonicWeights/: main.cpp
libigl-master/tutorial/404_DualQuaternionSkinning/: main.cpp
libigl-master/tutorial/406_FastAutomaticSkinningTransformations/: main.cpp
libigl-master/tutorial/505_MIQ/: main.cpp
libigl-master/tutorial/510_Integrable/: main.cpp
libigl-master/tutorial/602_Matlab/: main.cpp
libigl-master/tutorial/609_Boolean/: main.cpp
libigl-master/tutorial/702_WindingNumber/: main.cpp
libigl-master/tutorial/704_SignedDistance/: main.cpp
tinyply-master/source/: example.cpp
